@@ -131,6 +131,8 @@ void region_dump_stats(region_type *region, FILE *out);
 size_t region_get_recycle_size(region_type* region);
 /* get size of region memory in use */
 size_t region_get_mem(region_type* region);
+/* get size of region memory unused */
+size_t region_get_mem_unused(region_type* region);
 
 /* Debug print REGION statistics to LOG. */
 void region_log_stats(region_type *region);
